<resources>
    <string name="app_name">ReelMate</string>
    
    <!-- Login Screen -->
    <string name="login_title">Welcome to ReelMate</string>
    <string name="login_subtitle">Your Movie Watchlist &amp; Review App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Sign Up</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- Signup Screen -->
    <string name="signup_subtitle">Join ReelMate and start reviewing movies</string>
    <string name="name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button">Create Account</string>
    <string name="back_to_login">Sign In</string>

    <!-- Watchlist Screen -->
    <string name="watchlist_title">My Watchlist</string>
    <string name="add_movie">Add Movie</string>
    <string name="search_movies">Search movies...</string>
    
    <!-- Review Screen -->
    <string name="review_title">Movie Reviews</string>
    <string name="write_review">Write a Review</string>
    <string name="rating_label">Rate this movie:</string>
    <string name="review_text_hint">Share your thoughts about this movie...</string>
    <string name="submit_review">Submit Review</string>
    
    <!-- Common -->
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
</resources>